[gd_scene load_steps=11 format=3 uid="uid://b58827de6h0he"]

[ext_resource type="Script" uid="uid://dmeuf5jfe0lds" path="res://scripts/game.gd" id="1_wdqqa"]
[ext_resource type="PackedScene" uid="uid://ckhmejoa1q4tw" path="res://scenes/player.tscn" id="2_c60r5"]
[ext_resource type="Script" uid="uid://cbc5f5m4688k4" path="res://scenes/Bosses/revolvers/spawner.gd" id="3_wdqqa"]
[ext_resource type="PackedScene" uid="uid://dkaq08n2v0dna" path="res://scenes/Bosses/revolvers/revolver.tscn" id="4_c60r5"]
[ext_resource type="Texture2D" uid="uid://dyludn880arir" path="res://images/Grid.png" id="5_j218t"]

[sub_resource type="Animation" id="Animation_fc0e3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransisionRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(83, 2121)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransisionRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("over screen:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(338, 547)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("over screen:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_lbhrr"]
resource_name = "back"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransisionRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(83, -108), Vector2(83, 2121)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransisionRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.9666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"back_to_menu"
}]
}

[sub_resource type="Animation" id="Animation_lnu2h"]
resource_name = "game over"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("over screen:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.2588162, 1),
"update": 0,
"values": [Vector2(460, 1512), Vector2(460, 400)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("over screen:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_feb5d"]
resource_name = "start"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransisionRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(83, 2121), Vector2(83, -108)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("spawner")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_coin_timer_timeout"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("spawner")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_timer_timeout"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TransisionRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7jktm"]
_data = {
&"RESET": SubResource("Animation_fc0e3"),
&"back": SubResource("Animation_lbhrr"),
&"game over": SubResource("Animation_lnu2h"),
&"start": SubResource("Animation_feb5d")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_wdqqa")

[node name="player" parent="." instance=ExtResource("2_c60r5")]
position = Vector2(480, 352)

[node name="spawner" type="Node2D" parent="."]
script = ExtResource("3_wdqqa")
obs = ExtResource("4_c60r5")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(480, 352)
zoom = Vector2(0.9, 0.9)

[node name="obs_Timer" type="Timer" parent="."]

[node name="ShowWarning" type="CheckButton" parent="."]
offset_left = 132.0
offset_top = 767.00006
offset_right = 291.0
offset_bottom = 798.00006
scale = Vector2(2.3446553, 2.3763819)
button_pressed = true
text = "Show Warning"

[node name="txtscore" type="Label" parent="."]
offset_left = 436.0
offset_top = -109.0
offset_right = 493.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 100
text = "0"
metadata/_edit_use_anchors_ = true

[node name="txtcoin" type="Label" parent="."]
offset_left = 745.0
offset_top = -113.0
offset_right = 859.0
offset_bottom = 24.0
theme_override_colors/font_color = Color(1, 1, 0.56078434, 1)
theme_override_font_sizes/font_size = 50
text = "$ 0"
metadata/_edit_use_anchors_ = true

[node name="coin_Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="TransisionRect" type="Node2D" parent="."]
visible = false
z_index = 4
position = Vector2(83, 2121)

[node name="Transision" type="ColorRect" parent="TransisionRect"]
offset_left = -679.0
offset_top = -2747.0
offset_right = 1377.0
offset_bottom = -506.0
color = Color(0.099985994, 0.099985994, 0.099985994, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7jktm")
}
autoplay = "start"

[node name="over screen" type="Node2D" parent="."]
visible = false
position = Vector2(338, 547)

[node name="Label" type="Label" parent="over screen"]
z_index = 3
offset_left = -120.0
offset_top = -236.0
offset_right = 151.0
offset_bottom = -167.0
theme_override_font_sizes/font_size = 50
text = "Game Over"

[node name="txthighscore" type="Label" parent="over screen"]
z_index = 3
offset_left = -154.0
offset_top = -124.0
offset_right = 117.0
offset_bottom = -55.0
theme_override_font_sizes/font_size = 25
text = "Highscore : "

[node name="ColorRect" type="ColorRect" parent="over screen"]
z_index = 2
offset_left = -305.0
offset_top = -288.0
offset_right = 340.0
offset_bottom = 352.0
color = Color(0.15487596, 0.154876, 0.15487596, 1)

[node name="Back" type="Button" parent="over screen"]
z_index = 3
offset_left = -119.0
offset_top = 174.0
offset_right = 166.0
offset_bottom = 274.0
theme_override_font_sizes/font_size = 30
text = "Back to menu"

[node name="Try Again" type="Button" parent="over screen"]
z_index = 3
offset_left = -120.0
offset_top = 57.0
offset_right = 165.0
offset_bottom = 157.0
theme_override_font_sizes/font_size = 30
text = "Try Again"

[node name="Grid" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(480, 352)
scale = Vector2(0.3083333, 0.31111115)
texture = ExtResource("5_j218t")

[node name="ColorRect" type="ColorRect" parent="Grid"]
offset_left = -314.5946
offset_top = -308.5714
offset_right = 314.5946
offset_bottom = 311.78564
color = Color(1, 1, 1, 0.11764706)

[connection signal="timeout" from="obs_Timer" to="spawner" method="_on_timer_timeout"]
[connection signal="timeout" from="coin_Timer" to="spawner" method="_on_coin_timer_timeout"]
[connection signal="pressed" from="over screen/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="over screen/Try Again" to="." method="_on_try_again_pressed"]
